--- a/Projects/Base-Config/Alpine/inventory/hosts.ini
+++ b/Projects/Base-Config/Alpine/inventory/hosts.ini
@@ -1,2 +1,2 @@
 [alpine]
-alpine-box-wifi ansible_host=192.168.10.42 ansible_user=awahl ansible_become_method=doas ansible_become=true ansible_python_interpreter=/usr/bin/python3
+alpine-box-wifi ansible_host=192.168.10.42 ansible_user=$LOGNAME ansible_become_method=doas ansible_become=true ansible_python_interpreter=/usr/bin/python3
